@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.4-02
-Date: 2011-2-8
+Version: 1.4-02.01
+Date: 2011-2-14
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <suyusung@tsinghua.edu.cn>,
